# pyserialmonitor

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
src/pyserialmonitor/: __main__.py  app.py  main.py
src/pyserialmonitor/config/: config.toml
src/pyserialmonitor/styles/: main.tcss
src/pyserialmonitor/utils/: colors.py
src/pyserialmonitor/widgets/: serial_tabs.py
src/serialmonitor/: __main__.py  app.py
src/serialmonitor/config/: config.toml
src/serialmonitor/styles/: main.tcss
src/serialmonitor/utils/: __init__.py  colors.py
src/serialmonitor/widgets/: serial_tabs.py
