[project]
name = "python-serialmonitor"
version = "1.1.1"
description = "Python Serial Monitor"
readme = "README.md"
authors = [
    { name = "Vivatsathorn Thitasirivit", email = "vivatsathorn@outlook.co.th" }
]
requires-python = ">=3.10"
dependencies = [
    "hatchling",
    "libgcs",
    #    "libgcs @ git+https://gitlab.com/vtneil/libgcs.git",
    "pyserial",
    "textual",
]

[dependency-groups]
dev = [
    "textual-dev",
]

[project.scripts]
serialmonitor = "serialmonitor.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
packages = [
    "serialmonitor"
]
include = [
    "src/serialmonitor/config/config.toml",
    "src/serialmonitor/styles/*.tcss",
]

[tool.hatch.build.targets.wheel]
packages = ["src/serialmonitor"]
