[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-serialmonitor"
version = "1.1.5"
description = "Python Serial Monitor"
readme = "README.md"
authors = [
    { name = "Vivatsathorn Thitasirivit", email = "vivatsathorn@outlook.co.th" }
]
requires-python = ">=3.10"
dependencies = [
    "libgcs",
    #    "libgcs @ git+https://gitlab.com/vtneil/libgcs.git",
    "pyserial",
    "textual",
]

[dependency-groups]
dev = [
    "textual-dev",
]

[project.scripts]
serialmonitor = "serialmonitor.run:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build]
include = [
    "src/serialmonitor/**",
]

[tool.hatch.build.targets.wheel]
packages = ["src/serialmonitor"]
